tests/good/interpret/050-pattern-sum-different-constructor.clap
val c = (case { B[x] => x })(A[42])

