tests/bad/typing/036-psum-at-subpattern.clap
val x = case { A at { B } [_] => 42 }
